docs: adds done points to roadmap

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "keywords": [
     "Kafkajs",
     "Nestjs",
-    "Kafka"
+    "Kafka",
+    "Backend"
   ],
   "author": "janniklorenz1994@gmail.com",
   "license": "MIT",
